<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:minHeight="400dp"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_marginBottom="@dimen/default_padding"
            android:gravity="center">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher_round"
                android:layout_margin="@dimen/default_padding"/>


            <!--    native-->
            <Button
                android:id="@+id/nativeUiBtn"
                android:layout_width="@dimen/into_screen_width_btn"
                android:layout_height="wrap_content"
                android:text="@string/native_controls_btn"/>
            <TextView
                android:layout_width="@dimen/into_screen_width_description"
                android:layout_height="wrap_content"
                android:text="@string/native_controls_description"
                android:gravity="center"/>

            <!--    collect-->
            <Button
                android:id="@+id/collectUiBtn"
                android:layout_width="@dimen/into_screen_width_btn"
                android:layout_height="wrap_content"
                android:text="@string/collect_controls_btn"
                android:layout_marginTop="@dimen/default_padding"/>

            <TextView
                android:layout_width="@dimen/into_screen_width_description"
                android:layout_height="wrap_content"
                android:text="@string/collect_controls_description"
                android:gravity="center"/>


            <View
                android:id="@+id/viewDecoration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.15"
                android:background="@color/colorAccent"
                android:rotationX="25"
                android:rotationY="25" />

        </LinearLayout>

    </FrameLayout>

</ScrollView>