<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:ignore="HardcodedText">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        app:errorEnabled="true"
        android:textColorHint="@android:color/darker_gray"
        app:boxStrokeColor="@color/colorAccent"
        app:hintEnabled="true"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"
            android:lines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/components_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_holder"
        app:errorEnabled="true"
        android:textColorHint="@android:color/darker_gray"
        app:boxStrokeColor="@color/colorAccent"
        app:hintEnabled="true"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCardHolderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text"
            android:lines="1"
            android:maxLength="30"
            android:nextFocusDown="@id/etDate"
            android:textSize="@dimen/components_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/exp_date"
            app:errorEnabled="true"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/colorAccent"
            app:hintEnabled="true"
            app:hintTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lines="1"
                android:textSize="@dimen/components_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_weight="1"
            android:hint="@string/cvc"
            app:errorEnabled="true"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/colorAccent"
            app:hintEnabled="true"
            app:hintTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCVC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:lines="1"
                android:maxLength="3"
                android:textSize="@dimen/components_text_size" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbAddCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="@color/colorAccent"
        android:text="Add card"
        android:textAllCaps="false"
        android:textSize="@dimen/components_text_size" />
</LinearLayout>